--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -9,11 +9,9 @@
           <a [routerLink]="'/language_detection'" class="nav-link active" aria-current="page">Language detection</a>
           <a [routerLink]="'/sentiment_analysis'" class="nav-link active" aria-current="page">Sentiment analysis</a>
           <a [routerLink]="'/text_similarity'" class="nav-link active" aria-current="page">Text similarity</a>
+          <a [routerLink]="'/history'" class="nav-link active" aria-current="page">History</a>
+        </div>
 
-        </div>
-        <div class="d-flex">
-<!--          <span>{{ getToken() }}</span>-->
-        </div>
       </div>
     </div>
   </nav>
